setup cert on gateway

--- a/platform/Taskfile.yml
+++ b/platform/Taskfile.yml
@@ -8,7 +8,8 @@ includes:
     taskfile: automation/Taskfile.yml
 
 tasks:
-  deploy:
+  deploy-platform:
+    dir: platform
     cmds:
       - ai:deploy
       - automation:deploy
