--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -69,13 +69,13 @@ hubble:
     enabled: true
     rollOutPods: true
 
-# ingressController:
-#   enabled: true
+ingressController:
+  enabled: false
 #   default: true
 #   loadbalancerMode: shared
 #   service:
 #     annotations:
-#       io.cilium/lb-ipam-ips: 192.168.2.195
+#       io.cilium/lb-ipam-ips: 192.168.X.X
 #     insecureNodePort: 32434
 #     secureNodePort: 31247
 
