--- a/kubernetes/apps/networking/cilium/values.yaml
+++ b/kubernetes/apps/networking/cilium/values.yaml
@@ -88,8 +88,8 @@ ingressController:
   default: true
   loadbalancerMode: shared
   service:
-    annotations:
-      io.cilium/lb-ipam-ips: 192.168.2.195
+    # annotations:
+    #   io.cilium/lb-ipam-ips: 192.168.X.X
     insecureNodePort: 32434
     secureNodePort: 31247
 
