--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -11,3 +11,5 @@ helmCharts:
     namespace: ai
     releaseName: open-webui
     valuesFile: openwebui-values.yaml
+
+# TODO: use sops with kustomize
