--- a/platform/ai/k8s/secret.sops.yaml
+++ b/platform/ai/k8s/secret.sops.yaml
@@ -1,25 +1,25 @@
-apiVersion: v1
-kind: Secret
+apiVersion: ENC[AES256_GCM,data:63g=,iv:+RgxouDXrAB7W2byw6L4L9X7bp/g7DO3y3otu0PxhGo=,tag:TmQnpILlED0wxPKbJhtjKg==,type:str]
+kind: ENC[AES256_GCM,data:AvMLYVJ2,iv:EPHjCxJrish5hrcNIJ+q/45Tj61DZmQMLhpEt7XSY3E=,tag:GDZpKZnft+o0282mWhDbww==,type:str]
 metadata:
-    name: openwebui-secrets
-    namespace: ai
+    name: ENC[AES256_GCM,data:oVnQBMvxsCUBANeMMeuWhY8=,iv:1jXN4t7b5gNXdRCUoVH5eFEhYQgyTM5H6IKlmjnjNEM=,tag:Y0q1C0zciMZDNKwk/ZfDvg==,type:str]
+    namespace: ENC[AES256_GCM,data:8XI=,iv:1VQ4fynDSI4qcqaeoTfMJrTbSSDdNmyD+CC5clUz49M=,tag:sqMGugNlCQCeP/uM9CdsOA==,type:str]
 stringData:
-    webui_secret: ENC[AES256_GCM,data:/zESlBtIlmgXuD3mcEvQbmFX8Z001l9cBH/fJYE=,iv:e2fyZZp73G9l3uZRKB+j6wKUBXgUeLRTUNNIiRmVfig=,tag:LU0w7/DOCUkXkD19ilB3Dg==,type:str]
-    webui_api_key: ENC[AES256_GCM,data:v3ITiZfEJDcbLya+QXSKODSph4waav8n5dliAYVp3t0QBxM=,iv:xjd5c1tfFMkzkVkAVsV13n4TOhpfXlQOWnVtF0hhUok=,tag:eRoUmbsarS/erD4n6/WcPQ==,type:str]
-    github_token: ENC[AES256_GCM,data:0v4tcJATOKrtnBCLuGuHPCrqjkEzOiMhsSJgRJOwOhTvYaWvBZuLvQ==,iv:0MdlxI/78fC6Z7cB/WQUmjm7dIjlBpFfegiXr7dTvqo=,tag:0zEDdVPZRroauY6No2BIlg==,type:str]
-    n8n_api_key: ENC[AES256_GCM,data:6hHEueHA2S/0Ytv/oM9xhRoThZYuIQ7pB4UWOp1/stoxrHF0VBHldTDakV74WvjBAQ8ts9HA5VgeDkxRsrOWI7aTc/kPXHd90LprXo6op0aSsSbIofUXukCQngseKLgQZp4D6Yctxu/chBS/e/cPYR99HhNFivoYIaKP+5ZmcScx0yEpFghLCxDKgfDp9oHHRX8ELyYVWUtFsX6e0nr0GEe2dfNbQN7m8LMxDxNylRxZIBJaR6dMiiuoaqeU/nVvkKVAipwLthFiL7LzyF+Y,iv:SopxSF0Ae4g4TcPi2LoVMLhMFwyJmzpSj61oGNmUBpw=,tag:weCyKO8axiJlYKkBhnXB8A==,type:str]
+    webui_secret: ENC[AES256_GCM,data:6hLwbYF2Gk4DDyDwlYLXgo1f/bzIZWaFFXtjWCU=,iv:p0NFl795zUr4pOI4mEarCYmtgKmi8zgWD3sh/AS01UU=,tag:JQs7gZ+MaZwatY3dQCdhOg==,type:str]
+    webui_api_key: ENC[AES256_GCM,data:6KuO7F8gp/+xF9ByIASEGquxierCqu+YPIpASkDQpcsvWXg=,iv:4Q4gfgJ/UWCoAP7Z4KBQhaNO47QVfsCSfKKUemQv5eA=,tag:rfk3VKNmK8GBImkyLOxOig==,type:str]
+    github_token: ENC[AES256_GCM,data:yszR2n192dEuQ2gYkuYpJViFC/DOdgqCBYSvTIM5ZNHVv2CnQygZmQ==,iv:HSM1UptZaxtOu50IqZyvxybYf9x2K31NoHpM8+L4X80=,tag:LWUXS6sGRMT3L8qjRChx7g==,type:str]
+    n8n_api_key: ENC[AES256_GCM,data:bG7dX7Jju0cfmvX8uc08kQbfJktWfvH+rpRPz/FPXe1Q/chZeKPdHCPkVuBd1RtvJ9RmNxWbJISCSv8jK6znFVTHlYs0OjDp8pgyVl3z1X+jMQhlXqlRXYXW4XEdqptsmwvZph4ILB78cgyMxLyZD83VR6FmQXMI4NQwT0AI0s1HHLjlMLP3ANDlzkCHFT0fOY6kyWcn5KRBHXSNeyDzcVfC1tF3edN24vc+Hm9UZDu9QZZ962umT495AThsbiqSuk19VGoNu+a8wCkEwfNE,iv:/j/kkdGyoxHMHwcaWiOhVgHo87pkO7JiuX9pRWIN+XA=,tag:nwS5y5nSuypQWsuuLNxqcg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-02-28T22:16:14Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAHuHzFlTWEGIuS4F/9C2ixEAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM+1fE5zbxO09/HY0VAgEQgDttP8jNAMGMD1ubFaznm58fHLpX9MxHm0baedP1XqEd0vmrqIhlDbS1iXIv5R6OX58i6U/NLBKASyyX1Q==
+          created_at: "2025-03-01T16:27:35Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFh6pu0Z7MP3i6ZGxnnT/duAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMYUg623b7hmxivmSTAgEQgDsmEtmQzrH2SvRxE03kxP+tBfMEVK3sjA/UVQRunkTUWQiVo+zwUY736d9af1uliR6Pu6bEn10nq5oHAw==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-02-28T22:16:14Z"
-    mac: ENC[AES256_GCM,data:fnB67GMd3S+DIaigTgigOYT55OOFpA2NohasUIEGV8p1MQqrwjhCgQKAiOB8NiaBXaIc3+QJQ+NWAZYJPTmZ5EBNM85iqswY0qBbh2rj6Jwwm4nWfZzr6EG6Rk7oIoxIalozl6/J3bTwA9U830ld1jHCMGy6zKIv47mow7oMcws=,iv:782f7w2zwmv9bya8NExXNmHIxD+2TUPhy0PU0VX4E3o=,tag:tz1MsoCXqMTcmW3FGQ/kbg==,type:str]
+    lastmodified: "2025-03-01T16:27:35Z"
+    mac: ENC[AES256_GCM,data:hcWd+0o2R27g/uXp+6XQiuk4sVrqudjy1GUZMIRnDOjrF80mpDj8O2c+BAc0SMOjxmYjeRP89h2T4jXm5pw6lHrwzCsRY3u6M1hUQjd35JiCkwtTJ+JEReqZ8Ls+WBPQc8t5jAEQh6jEOejAIpLEt8nJ+7jwpluFGRuCDOs3YXc=,iv:VwKYHW+tYEXJ0hp/ktukAa7vVZmmjDEccaomFX6VK78=,tag:6w4nsPiaAcmB+k9ZmmTcuw==,type:str]
     pgp: []
-    encrypted_regex: ^(data|stringData)$
+    encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
