--- a/platform/ai/k8s/openwebui-values.yaml
+++ b/platform/ai/k8s/openwebui-values.yaml
@@ -80,7 +80,7 @@ service:
 
 extraEnvVars:
   - name: WEBUI_URL
-    value: http://ai.homelab.local
+    value: https://ai.homelab.local
   - name: K8S_FLAG
     value: "true"
   - name: OLLAMA_HOST
