--- a/platform/automation/k8s/kustomization.yaml
+++ b/platform/automation/k8s/kustomization.yaml
@@ -3,4 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: automation
 resources:
+  - namespace.yaml
   - n8n
+generators:
+  - secrets-generator.yaml
