rm unused charts from bootstrap and rm service account for coredns

--- a/kubernetes/.taskfiles/kubectl/Taskfile.yml
+++ b/kubernetes/.taskfiles/kubectl/Taskfile.yml
@@ -7,9 +7,10 @@ tasks:
     cmds:
       - kubectl get pods -A -o wide | grep -E 'nvidia|cuda'
   
-  test_internal_dns:
+  test-internal-dns:
     cmds:
-      - task: switch_kube_context
-        vars: {CLUSTER_CONTEXT: '{{ .CLUSTER_CONTEXT }}'}
-        when: '{{ .SWITCH_CONTEXT }}'
       - kubectl run -i --tty --rm debug --image=busybox --restart=Never -- nslookup {{ .DNS_HOST }}
+      
+  launch-dns-debugger:
+    cmds:
+      - kubectl run -it --rm --restart=Never --image=infoblox/dnstools:latest dnstools
