--- a/platform/automation/k8s/n8n/service.yaml
+++ b/platform/automation/k8s/n8n/service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,6 +9,7 @@ spec:
   selector:
     app: n8n
   ports:
-  - port: 5678
-    targetPort: 5678
-    protocol: TCP
+    - name: http
+      port: 5678
+      targetPort: 5678
+      protocol: TCP
