--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,5 @@
 ---
-name: Release Workflow
+name: Release
 
 on:
   push:
@@ -28,13 +28,13 @@ jobs:
               echo "Month release does not exist for year, setting patch number to 0"
               next_patch="0"
           fi
-  
+
           release_tag="${next_major_minor}.${next_patch}"
           gh release create "${release_tag}" \
               --repo="${GITHUB_REPOSITORY}" \
               --title="${release_tag}" \
               --generate-notes
-  
+
   deploy-docs:
     name: Deploy Docs
     needs: create-release
