--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,7 @@ includes:
   docs:
     taskfile: docs/Taskfile.yml
 
-dotenv: ['./kubernetes/.env']
+dotenv: ['.envrc']
 
 tasks:
   help:
@@ -33,36 +33,38 @@ tasks:
   deploy-portainer:
       dir: terraform
       summary: Standup lxc container with portainer for container management
+      env:
+        PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
+        PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
+        PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_ONE_IP}}:8006"
+        PROXMOX_VE_SSH_AGENT: "false"
+        PROXMOX_VE_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
       cmds:
         - |-
           tofu init --upgrade
         - |-
           tofu plan \
             -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
-            -var proxmox_username=$PROXMOX_USERNAME \
-            -var proxmox_password=$PROXMOX_PASSWORD \
             -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
+            -var proxmox_ssh_public_key=$PROXMOX_NODE_ONE_PUBLIC_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
             -var portainer_password=$PORTAINER_PASSWORD
         - |-
           tofu apply -auto-approve \
             -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
-            -var proxmox_username=$PROXMOX_USERNAME \
-            -var proxmox_password=$PROXMOX_PASSWORD \
             -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
+            -var proxmox_ssh_public_key=$PROXMOX_NODE_ONE_PUBLIC_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
             -var portainer_password=$PORTAINER_PASSWORD
-  
+
   destroy-portainer:
       dir: terraform
       cmds:
         - |-
           tofu destroy -auto-approve \
             -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
-            -var proxmox_username=$PROXMOX_USERNAME \
-            -var proxmox_password=$PROXMOX_PASSWORD \
             -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
