--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,7 @@
 ---
 area/bootstrap:
   - changed-files:
-      - any-glob-to-any-file: .taskfiles/**/*
+      - any-glob-to-any-file: */.taskfiles/**/*
       - any-glob-to-any-file: Taskfile*
 area/platform:
   - changed-files:
