--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,5 @@
 ---
-name: Deploy Docs
+name: Release
 
 on:
   push:
@@ -15,22 +15,25 @@ on:
 
 jobs:
   create-release:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
-    - name: Install dependencies
-      run: npm install -g semantic-release
-    - name: Run Semantic Release
-      id: semantic
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |-
-        npx semantic-release > semantic_release_output.txt
-        VERSION=$(grep -oP '(?<=v)[0-9]+\.[0-9]+\.[0-9]+' semantic_release_output.txt)
-        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+    name: Create Release Version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm install -g semantic-release
+      - name: Run Semantic Release
+        id: semantic
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |-
+          npx semantic-release > semantic_release_output.txt
+          VERSION=$(grep -oP '(?<=v)[0-9]+\.[0-9]+\.[0-9]+' semantic_release_output.txt)
+          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
   deploy-docs:
     name: Deploy Docs
