setup machine folder in talos tf module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,13 +21,16 @@
   },
   "go-template.languages": [
     "gotmpl",
+    "tftpl",
     "yaml",
   ],
   "go-template.patterns": [
-    "**/*.yaml.gotmpl"
+    "**/*.yaml.gotmpl",
+    "**/*.yaml.tftpl"
   ],
   "files.associations": {
     "*.gotmpl": "yaml",
+    "*.tftpl": "yaml",
     "*.css": "tailwindcss"
   },
 }
