--- a/kubernetes/charts/platform/templates/gateway.yaml
+++ b/kubernetes/charts/platform/templates/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: homelab-gateway
   namespace: kube-system
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "homelab.local,*.homelab.local"
+    external-dns.alpha.kubernetes.io/hostname: "homelab.local"
 spec:
   gatewayClassName: cilium
   infrastructure:
@@ -19,7 +19,7 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
-  - name: https-gateway
+  - name: http-service-gateway
     hostname: "*.homelab.local"
     protocol: HTTP
     port: 80
