--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -1,6 +1,7 @@
 name: Pull Request Workflow
 
-on: [pull_request]
+on:
+  - pull_request_target
 
 jobs:
   create_pr_labels:
@@ -9,6 +10,4 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@v4
-        with:
-          repo-token: "${{ secrets.GH_PAT }}"
+      - uses: actions/labeler@v5
