--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,10 @@
 ---
+area/github:
+  - changed-files:
+      - any-glob-to-any-file: .github/**/*
 area/bootstrap:
   - changed-files:
-      - any-glob-to-any-file: */.taskfiles/**/*
+      - any-glob-to-any-file: .taskfiles/**/*
       - any-glob-to-any-file: Taskfile*
 area/platform:
   - changed-files:
@@ -15,3 +18,4 @@ area/virtual-machine:
 area/documentation:
   - changed-files:
       - any-glob-to-any-file: docs/**/*
+
