--- a/platform/ai/k8s/openwebui-values.yaml
+++ b/platform/ai/k8s/openwebui-values.yaml
@@ -76,11 +76,13 @@ pipelines:
 
 ollamaUrls: ["http://ollama.ai.svc.cluster.local:11434"]
 service:
-  type: ClusterIP
-
+  type: LoadBalancer
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: openwebui.homelab.local
+    cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
 extraEnvVars:
   - name: WEBUI_URL
-    value: http://ai.homelab.local
+    value: http://openwebui.homelab.local
   - name: K8S_FLAG
     value: "true"
   - name: OLLAMA_HOST
@@ -128,4 +130,3 @@ extraEnvVars:
       secretKeyRef:
         name: aws-credentials
         key: aws_secret_access_key
-  
