--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,8 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm install -g semantic-release
+        run: |-
+          npm install -g semantic-release && npm install --prefix docs
       - name: Run Semantic Release
         id: semantic
         env:
