--- a/docs/.releaserc
+++ b/docs/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": ["release/1.0.0"],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
