--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: npm --prefix docs install
       - name: Version Docs
-        run: npm run docusaurus docs:version ${{ steps.semantic.outputs.newRelease.version }} --prefix docs
+        run: npm --prefix docs run docusaurus docs:version ${{ steps.semantic.outputs.newRelease.version }}
       - name: Build website
         run: npm --prefix docs run build
       - name: Upload Build Artifact
