--- a/docs/.releaserc
+++ b/docs/.releaserc
@@ -1,10 +1,29 @@
 {
+  "repositoryUrl": "https://github.com/teaglebuilt/homelab.git",
   "branches": ["main"],
+  "tagFormat": "v${version}",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    "@semantic-release/npm",
-    "@semantic-release/github"
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "CHANGELOG.md",
+          "README.md"
+        ]
+      }
+    ],
+    [
+      "@semantic-release/github", {
+        "assignees": "timoa"
+      }
+    ]
   ]
 }
