--- a/platform/automation/k8s/n8n/deployment.yaml
+++ b/platform/automation/k8s/n8n/deployment.yaml
@@ -65,9 +65,13 @@ spec:
             - name: N8N_SECURE_COOKIE
               value: "false"
             - name: N8N_HOST
-              value: automation.homelab.local
+              value: n8n.homelab.local
             - name: N8N_PROTOCOL
               value: https
+            - name: N8N_SSL_CERT
+              value: "/certs/tls.crt"
+            - name: N8N_SSL_KEY
+              value: "/certs/tls.key"
             - name: N8N_DIAGNOSTICS_ENABLED
               value: "false"
             - name: N8N_ONBOARDING_FLOW_DISABLED
@@ -97,6 +101,9 @@ spec:
           volumeMounts:
             - name: credentials
               mountPath: /backup/credentials
+            - name: certificates
+              mountPath: "/certs"
+              readOnly: true
             - name: workflows
               mountPath: /backup/workflows
             - name: n8n-storage
@@ -105,10 +112,12 @@ spec:
         - name: credentials
           configMap:
             name: credentials-cm
+        - name: certificates
+          secret:
+            secretName: n8n-tls
         - name: workflows
           configMap:
             name: workflows-cm
         - name: n8n-storage
           persistentVolumeClaim:
             claimName: n8n-storage-pvc
-  
