--- a/platform/automation/k8s/n8n/pvc.yaml
+++ b/platform/automation/k8s/n8n/pvc.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: n8n-storage-pvc
   namespace: automation
-  labels:
-    version: v1.0
+  # labels:
+  #   version: v1.0
 spec:
   accessModes:
     - ReadWriteOnce
