--- a/platform/automation/k8s/n8n/service.yaml
+++ b/platform/automation/k8s/n8n/service.yaml
@@ -3,8 +3,11 @@ kind: Service
 metadata:
   name: n8n-service
   namespace: automation
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.local
+    cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: n8n
   ports:
