--- a/docs/.releaserc
+++ b/docs/.releaserc
@@ -3,7 +3,6 @@
   "branches": ["main"],
   "tagFormat": "v${version}",
   "plugins": [
-    "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/changelog",
@@ -15,6 +14,7 @@
       "@semantic-release/git",
       {
         "assets": [
+          "docs",
           "CHANGELOG.md",
           "README.md"
         ]
@@ -22,7 +22,7 @@
     ],
     [
       "@semantic-release/github", {
-        "assignees": "timoa"
+        "assignees": "teaglebuilt"
       }
     ]
   ]
