remove manifests folder in talos cluster tf module

--- a/kubernetes/.taskfiles/talos/Taskfile.yaml
+++ b/kubernetes/.taskfiles/talos/Taskfile.yaml
@@ -27,6 +27,24 @@ tasks:
     cmds:
       - talosctl {{.COMMAND}} -n {{.NODE}}
 
+  read-*:
+    vars:
+      FILE: '{{index .MATCH 0}}'
+    cmds:
+      - talosctl read {{.FILE}}
+
+  watch-logs:
+    cmds:
+      - talosctl dmesg --follow -n {{.NODE}}
+
+  tail-logs:
+    cmds:
+      - talosctl dmesg --follow --tail -n {{.NODE}}
+
+  machineconfig:
+    cmds:
+      - talosctl get machineconfig -n {{.NODE}} -o yaml
+
   fetch-kubeconfig:
     desc: Fetch kubeconfig from Talos controllers
     dir: "{{.CLUSTER_DIR}}"
