--- a/kubernetes/helmfile.d/02-core.gotmpl.yaml
+++ b/kubernetes/helmfile.d/02-core.gotmpl.yaml
@@ -26,6 +26,8 @@ releases:
     values:
       - crds:
           enabled: true
+        nodeSelector:
+          kubernetes.io/hostname: mlops-work-01
     hooks:
       - events: ["postsync"]
         showlogs: true
