--- a/kubernetes/.taskfiles/kubectl/Taskfile.yml
+++ b/kubernetes/.taskfiles/kubectl/Taskfile.yml
@@ -6,11 +6,15 @@ tasks:
     desc: List all AI pods
     cmds:
       - kubectl get pods -A -o wide | grep -E 'nvidia|cuda'
-  
+
   test-internal-dns:
     cmds:
       - kubectl run -i --tty --rm debug --image=busybox --restart=Never -- nslookup {{ .DNS_HOST }}
-      
+
   launch-dns-debugger:
     cmds:
       - kubectl run -it --rm --restart=Never --image=infoblox/dnstools:latest dnstools
+
+  cleanup-pods:
+    cmds:
+      kubectl get pod -n studytonight | grep Evicted | awk '{print $1}' | xargs kubectl delete pod -n studytonight
