--- a/tf_modules/talos_cluster/patches/kubelet.yaml
+++ b/tf_modules/talos_cluster/patches/kubelet.yaml
@@ -1,6 +1,9 @@
 ---
 machine:
   kubelet:
+    extraArgs:
+      rotate-server-certificates: true
     nodeIP:
       validSubnets:
+        - 192.168.1.0/24
         - 192.168.2.0/24
